--- a/index.html
+++ b/index.html
@@ -7,8 +7,53 @@
     <title>Document</title>
 <script src="https://kit.fontawesome.com/9fa2714f50.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&family=Quicksand&display=swap"
+        rel="stylesheet">
 </head>
 <body>
+
+<div class="main">
+        <nav class="header">
+            <div class="header-left">
+                <a class="h-logo" href="#">Influencer products</a>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Home</a> </li>
+                    <li><a href="#">Products</a></li>
+                    <li><a href="#">sign-up</a></li>
+                    <li><a href="#">Login</a></li>
+                    <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                    <li><a href="#"><i class="fa-sharp fa-solid fa-cart-shopping"></i></a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <section class="banner-section">
+            <div class="banner-left">
+                <h1 class="banner-heading">Start your Journey as
+                    Influencer</h1>
+                <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed
+                    scelerisque eros. Lectus faucibus.</p>
+                <a class="hero-btn" href="#">Preebook now <span class="btn-arrow"><i class="fa-sharp fa-solid fa-arrow-right"></i></span></a>
+            </div>
+            <div class="banner-thumbnail">
+                <img src="./images/banner image.png" alt="">
+            </div>
+        </section>
+        <section class="web-section">
+           <a href="#"><img src="./logos/Alibaba.svg" alt=""></a> 
+           <a href="#"><img src="./logos/Amazon.svg" alt=""></a> 
+           <a href="#"><img src="./logos/Daraz.pk Logo.svg" alt=""></a> 
+           <a href="#"><img src="./logos/Ebay.svg" alt=""></a>
+           <a href="#"><img src="./logos/Rakuten.svg" alt=""></a> 
+           <a href="#"><img src="./logos/Target.svg" alt=""></a> 
+           <a href="#"><img src="./logos/Walmart.svg" alt=""></a> 
+        </section>
+</div>
+<a href=""></a>
     
 </body>
 </html>
